[package]
name = "emu"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
cranelift = "0.73.0"
cranelift-frontend = "0.73.0"
cranelift-jit = "0.73.0"
cranelift-module = "0.73.0"

lazy_static = "1.4.0"
rodio = "0.13.1"
dot = "0.1.4"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = { version = "0.3.3", features = ["html_reports"]}
